--- a/src/main/res/layout/atividade_console.xml
+++ b/src/main/res/layout/atividade_console.xml
@@ -21,6 +21,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_toLeftOf="@id/encerrar"
+        android:enabled="false"
         android:text="Entrar" />
 
     <EditText
@@ -29,7 +30,8 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_marginLeft="16dp"
-        android:layout_toLeftOf="@id/entrar" />
+        android:layout_toLeftOf="@id/entrar"
+        android:enabled="false" />
 
     <ScrollView
         android:id="@+id/scroll_saida"
