--- a/src/main/res/values/colors.xml
+++ b/src/main/res/values/colors.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <!-- Cores do Material Design
-    https://developer.android.com/training/material/theme.html
-    http://www.google.com/design/spec/style/color.html
+    https://developer.android.com/guide/topics/ui/look-and-feel/themes
+    https://material.io/design/color/
     https://gist.github.com/daniellevass/b0b8cfa773488e138037 -->
     <color name="md_blue_300">#64B5F6</color>
+    <color name="md_blue_500">#2196F3</color>
     <color name="md_blue_600">#1E88E5</color>
+    <color name="md_blue_800">#1565C0</color>
 
     <color name="colorPrimary">@color/md_blue_300</color>
     <color name="colorPrimaryDark">@color/md_blue_600</color>
