Tabs usando TabLayout

--- a/src/main/res/layout/atividade_principal.xml
+++ b/src/main/res/layout/atividade_principal.xml
@@ -16,10 +16,21 @@
 
         <include layout="@layout/include_toolbar" />
 
-        <WebView
-            android:id="@+id/editor"
+        <android.support.design.widget.TabLayout
+            android:id="@+id/sliding_tabs"
+            style="@style/TemaDoAplicativo.TabLayout"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="wrap_content"
+            app:tabGravity="fill"
+            app:tabMaxWidth="0dp"
+            app:tabMode="fixed" />
+
+        <android.support.v4.view.ViewPager
+            android:id="@+id/viewpager"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:background="@android:color/white" />
     </LinearLayout>
 
     <!-- Navigation Drawer -->
