--- a/src/main/res/values/colors.xml
+++ b/src/main/res/values/colors.xml
@@ -6,14 +6,16 @@
     https://gist.github.com/daniellevass/b0b8cfa773488e138037 -->
     <color name="md_blue_300">#64B5F6</color>
     <color name="md_blue_500">#2196F3</color>
+    <color name="md_blue_600">#1E88E5</color>
     <color name="md_blue_800">#1565C0</color>
-    <color name="md_blue_A200">#448AFF</color>
+    <color name="md_blue_900">#0D47A1</color>
+    <!--<color name="md_blue_A200">#448AFF</color>
     <color name="md_blue_A400">#2979FF</color>
-    <color name="md_blue_A700">#2962FF</color>
+    <color name="md_blue_A700">#2962FF</color>-->
 
     <color name="md_green_500">#4CAF50</color>
 
-    <color name="colorPrimary">@color/md_blue_A200</color>
-    <color name="colorPrimaryDark">@color/md_blue_A700</color>
+    <color name="colorPrimary">@color/md_blue_600</color>
+    <color name="colorPrimaryDark">@color/md_blue_900</color>
     <color name="colorAccent">@color/md_green_500</color>
 </resources>
