--- a/src/main/res/layout/nav_drawer_header.xml
+++ b/src/main/res/layout/nav_drawer_header.xml
@@ -30,4 +30,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
+    <TextView
+        android:id="@+id/nav_header_modificado"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 </LinearLayout>
