--- a/src/main/res/layout/activity_abrir_exemplo.xml
+++ b/src/main/res/layout/activity_abrir_exemplo.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".AtividadeAbrirExemplo">
+    tools:context=".activity.AbrirExemploActivity">
 
     <include layout="@layout/include_toolbar" />
 
