--- a/src/main/res/layout/activity_main.xml
+++ b/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context=".AtividadePrincipal">
+    tools:context=".activity.MainActivity">
 
     <!-- Conteúdo da tela -->
     <LinearLayout
