--- a/src/main/res/layout/fragment_console.xml
+++ b/src/main/res/layout/fragment_console.xml
@@ -11,6 +11,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
+        android:enabled="false"
         android:text="Encerrar" />
 
     <Button
