--- a/src/main/res/layout/fragment_console.xml
+++ b/src/main/res/layout/fragment_console.xml
@@ -39,12 +39,12 @@
         android:layout_above="@id/entrada"
         android:layout_alignParentLeft="true"
         android:layout_alignParentRight="true"
-        android:layout_below="@id/toolbar_layout">
+        android:layout_alignParentTop="true">
 
         <TextView
             android:id="@+id/saida"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:padding="8dp" />
     </ScrollView>
 </RelativeLayout>
